<resources>
    <string name="app_name">100 Montajeitos</string>
    <string name="nav_header_title">100 Montajeitos</string>
    <string name="nav_header_subtitle">Your montadito of quality</string>

    <string name="nav_montaditos">Montaditos</string>
    <string name="nav_menuTitle">Menu</string>
    <string name="nav_total">Total</string>
    <string name="nav_alcohol">Alcoholic Drinks</string>
    <string name="nav_drinks">Drinks</string>
    <string name="nav_salads">Salads</string>
    <string name="nav_appetizers">Appetizers</string>
    <string name="nav_desserts">Desserts</string>
    <string name="nav_settings">Settings</string>

    <string name="menu_dialog_title">Who wants %1$s?</string>
    <string name="menu_dialog_txt_chosenDiners">Diners who want it:</string>
    <string name="menu_dialog_accept">Accept</string>
    <string name="menu_dialog_cancel">Cancel</string>

    <string name="total_dialog_title">Are you sure?</string>
    <string name="total_dialog_description">You\'re going to delete \'%1$s\' from %2$s\'s order</string>
    <string name="total_dialog_accept">Yes</string>
    <string name="total_dialog_cancel">No</string>

    <string name="total_spinner_individual">Individual</string>
    <string name="total_spinner_collective">Collective</string>

    <string name="total_collective_appetizers_caps">APPETIZERS</string>
    <string name="total_collective_montaditos_caps">MONTADITOS</string>
    <string name="total_collective_salads_caps">SALADS</string>
    <string name="total_collective_drinks_caps">DRINKS</string>
    <string name="total_collective_alcohol_caps">ALCOHOL</string>
    <string name="total_collective_desserts_caps">DESSERTS</string>
    <string name="total_collective_total_caps">TOTAL</string>



    <string name="error_noClients">You can\'t perform this action without any clients</string>
</resources>
